Issue:#26 test:Unit Test
Add unit test for all controllers
